yaml/min-cluster-allinone/traefik/backup/saf-boot-starter-sample-allinone-web-prod-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: saf-boot-starter-sample-allinone-web-prod
  name: saf-boot-starter-sample-allinone-web-prod
  namespace: inc
spec:
  rules:
  - host: saf-web-allinone.future.com
    http:
      paths:
      - backend:
          serviceName: saf-boot-starter-sample-allinone-web-prod
          servicePort: 80
        path: /
